# phonebot_android

./: README.md
app/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
app/app/: AndroidManifest.xml  build.gradle
app/app/jni/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/app/res/layout/: activity_connection.xml  activity_hacks.xml  activity_ide.xml  activity_legs.xml  activity_main.xml  activity_operation.xml  activity_sensors.xml  ble_connection.xml  fragment_camera2_basic.xml  fragment_leginterface.xml  fragment_leginterface_list.xml  gatt_services_characteristics.xml  listitem_device.xml
app/app/res/layout-land/: fragment_camera2_basic.xml
app/app/res/menu/: gatt_services.xml  main.xml  main_menu.xml
app/app/res/values/: base-strings.xml  strings.xml
app/app/res/xml/: pref_headers.xml
app/app/src/main/com/phonebot/: AppCompatPreferenceActivity.java  AutoFitTextureView.java  BackCameraPreview.java  BleConstants.java  BluetoothLeService.java  Camera2BasicFragment.java  CameraActivity.java  Connection.java  DetectionBasedTracker.java  DeviceControlActivity.java  DeviceScanActivity.java  DualCamActivity.java  FdActivity.java  FrontCameraPreview.java  Hacks.java  IDE.java  InteractiveLegActivity.java  LegInterfaceFragment.java  LegInterfaceRecyclerViewAdapter.java  LegViewData.java  MainActivity.java  Operation.java  OrientationListener.java  PhoneBotAttributes.java  PhoneBotCommandEncoder.java  SensorsActivity.java  SettingsActivity.java
app/gradle/wrapper/: gradle-wrapper.properties
